[tool.poetry]
name = "hw-4"
version = "0.1.0"
description = ""
authors = ["Maksym <150614204+MaksElkapalka@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
